<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:text="@string/GrowTime"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/RecommendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecommendPlants"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/Honors_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CanIGrowThisHere"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/LocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/MyGarden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyGarden"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/addPlantHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AddPlant" />

    <Button
        android:id="@+id/editPlantHome"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/EditPlant" />

    <Button
        android:id="@+id/testNotificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Test Notification"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/testWeatherApiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/test_weather_forecast" />

</LinearLayout>